[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Editor/Knob.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Editor/Node.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Editor/Pin.tscn" type="PackedScene" id=3]

[node name="Node" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KnobContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Knob" parent="KnobContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 0 )

[node name="LeftPinContainer" type="MarginContainer" parent="."]
anchor_left = -0.2
anchor_top = 0.3
anchor_right = 0.2
anchor_bottom = 0.7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pin" parent="LeftPinContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 409.0
margin_bottom = 240.0

[node name="RightPinContainer" type="MarginContainer" parent="."]
anchor_left = 0.8
anchor_top = 0.3
anchor_right = 1.2
anchor_bottom = 0.7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pin" parent="RightPinContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 409.0
margin_bottom = 240.0
